perf: 알라딘 검색 동시성 제어