@@ -7,13 +7,15 @@ import com.example.modam.domain.book.Domain.BookEntity;
 import com.example.modam.domain.book.Presentation.dto.BookSearchRequest;
 import com.example.modam.domain.book.Presentation.dto.ReviewScore;
 import com.example.modam.domain.book.Presentation.dto.addBookRequest;
+import com.example.modam.global.config.Semaphore.AladinSemaphore;
 import com.example.modam.global.exception.ApiException;
 import com.example.modam.global.exception.ErrorDefine;
 import com.example.modam.global.utils.BestSellerCache;
 import com.example.modam.global.utils.VariousFunc;
 import com.example.modam.global.utils.redis.RedisBookDataClient;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -24,7 +26,6 @@ import java.util.stream.Collectors;
 
 @Slf4j
 @Component
-@RequiredArgsConstructor
 public class BookFacade {
     private final BookService bookService;
     private final BookDataService bookDataService;
@@ -33,13 +34,36 @@ public class BookFacade {
     private final RedisBookDataClient redisBookDataClient;
     private final long BOOK_SEARCH_TTL_SECONDS = 259_200L; // 3일
 
+    @Qualifier("BookData")
+    private final ThreadPoolTaskExecutor bookData;
+
+    private final AladinSemaphore aladinSemaphore;
+
+    public BookFacade(
+            BookService bookService,
+            BookDataService bookDataService,
+            BestSellerCache bestSellerCache,
+            VariousFunc variousFunc,
+            RedisBookDataClient redisBookDataClient,
+            @Qualifier("BookData") ThreadPoolTaskExecutor bookData,
+            AladinSemaphore aladinSemaphore
+    ) {
+        this.bookService = bookService;
+        this.bookDataService = bookDataService;
+        this.bestSellerCache = bestSellerCache;
+        this.variousFunc = variousFunc;
+        this.redisBookDataClient = redisBookDataClient;
+        this.bookData = bookData;
+        this.aladinSemaphore=aladinSemaphore;
+    }
+
     // 알라딘 검색한 스레드가 이어서 DB에 저장하도록 연결하는 퍼사드, 베스트셀러는 서버 캐시에 저장
     public CompletableFuture<List<BookInfoResponse>> searchBook(BookSearchRequest dto, long userId) throws Exception {
 
         log.info("[search book to Exterior API] userId={}, queryType={}, query={} ",
                 userId, dto.getQueryType(), dto.getQuery());
 
-        boolean isBestseller = "Bestseller".equals(String.valueOf(dto.getQueryType()));
+        boolean isBestseller = "Bestseller".equals(dto.getQueryType());
 
         if (!isBestseller && variousFunc.isInvalidQuery(dto.getQuery())) {
             throw new ApiException(ErrorDefine.INVALID_ARGUMENT);
@@ -53,7 +77,7 @@ public class BookFacade {
             }
 
         }
-/*
+
         if (!isBestseller && redisBookDataClient.exists(dto.getQuery())) {
             log.info("[Previous Query] Fast DB Search for query={}", dto.getQuery());
 
@@ -70,34 +94,56 @@ public class BookFacade {
                         .collect(Collectors.toList());
             });
         }
-*/
-        CompletableFuture<List<BookInfoResponse>> response =
-                bookService.parseBookData(dto)
-                        .thenApply(bookData -> {
 
-                            List<BookEntity> entities;
+        aladinSemaphore.acquire();
 
-                            if (isBestseller) {
-                                entities = bookDataService.saveBook(bookData);
-                            } else {
-                                bookDataService.saveBook(bookData);
-                                entities = bookDataService.searchBook(dto.getQuery());
-                                redisBookDataClient.set(dto.getQuery(), entities, BOOK_SEARCH_TTL_SECONDS);
-                            }
+        CompletableFuture<List<BookInfoResponse>> response;
+        try {
+            response = bookService.parseBookData(dto)
+                    .thenApplyAsync(bookData -> {
 
-                            List<Long> bookIds = entities.stream()
-                                    .map(BookEntity::getId)
-                                    .distinct()
-                                    .toList();
+                        List<BookEntity> entities;
 
-                            Map<Long, ReviewScore> scoreMap = bookDataService.getBookReviewScore(bookIds)
-                                    .stream()
-                                    .collect(Collectors.toMap(ReviewScore::BookId, Function.identity()));
+                        if (isBestseller) {
+                            entities = bookDataService.saveBook(bookData);
+                        } else {
+                            bookDataService.saveBook(bookData);
+                            entities = bookDataService.searchBook(dto.getQuery());
+                            redisBookDataClient.set(
+                                    dto.getQuery(),
+                                    entities,
+                                    BOOK_SEARCH_TTL_SECONDS
+                            );
+                        }
 
-                            return entities.stream()
-                                    .map(book -> bookDataService.toDto(book, scoreMap.get(book.getId())))
-                                    .collect(Collectors.toList());
-                        });
+                        List<Long> bookIds = entities.stream()
+                                .map(BookEntity::getId)
+                                .distinct()
+                                .toList();
+
+                        Map<Long, ReviewScore> scoreMap =
+                                bookDataService.getBookReviewScore(bookIds).stream()
+                                        .collect(Collectors.toMap(
+                                                ReviewScore::BookId,
+                                                Function.identity()
+                                        ));
+
+                        return entities.stream()
+                                .map(book ->
+                                        bookDataService.toDto(
+                                                book,
+                                                scoreMap.get(book.getId())
+                                        )
+                                )
+                                .toList();
+
+                    }, bookData)
+                    .whenComplete((r, ex) -> aladinSemaphore.release());
+
+        } catch (Exception e) {
+            aladinSemaphore.release();
+            throw e;
+        }
 
         if (isBestseller) {
             synchronized (bestSellerCache) {
